@@ -207,6 +207,11 @@ fix_feather_interrupted_by_leveldoor = true
 ; Guards will often not reappear in another room if they have been pushed (partly or entirely) offscreen.
 fix_offscreen_guards_disappearing = true
 
+; While putting the sword away, if you press forward and down, and then release down, the kid will still duck.
+fix_move_after_sheathe = true
+
+; After uniting with the shadow in level 12, the hidden floors will not appear until after the flashing stops.
+fix_hidden_floors_during_flashing = true
 
 
 [CustomGameplay]
