@@ -1095,6 +1095,7 @@ typedef struct fixes_options_type {
 	byte fix_feather_interrupted_by_leveldoor;
 	byte fix_offscreen_guards_disappearing;
 	byte fix_move_after_sheathe;
+	byte fix_hidden_floors_during_flashing;
 } fixes_options_type;
 
 typedef struct custom_options_type {
